# ic-acata-hackathon-2024-api

./: .gitignore  pyproject.toml  requirements.txt
app/: azure_open_ai.py  database.py  main.py  sql_database.py
app/models/: ocr.py
app/models/base/: camel_sql_model.py  paginated_request.py  paginated_response.py
app/models/database/: document.py  ground_truth.py  nlp.py  nlp_accuracy.py  nlp_document.py  nlp_document_element.py  ocr.py
app/models/request/: nlp_request.py  prompt_request.py
app/models/response/: ground_truth.py  nlp_element_response.py
